--- a/styles.css
+++ b/styles.css
@@ -104,10 +104,14 @@ figure small {
     flex-direction: row;
     margin:40px 80px;
     align-content: center;
+    background-color: #3882F6;
+    padding: 10px;
+    border-radius: 30px;
 }
 .signup1 {
     display:flex;
     flex-direction: column;
+    color: #F9FAF8;
 }
 .signupb button {
     display: block;
