--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 * {
     max-width: 100%;
     font-family: 'Roboto', Verdana, Tahoma, sans-serif;
-    padding: 0px;
+    padding-top: 0px;
     margin: 0px;
+    border: 0px;
 }
-
 .intro, footer {
     background-color: #1F2937;
     color: aliceblue;
@@ -14,6 +14,8 @@
 }
 .intro {
     margin-top: 0px;
+    padding-top: 0px;
+    border: 0px;
 }
 h1{
     color: #F9FAF8;
