--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ h3 {
     font-style: italic;
 }
 button {
-    background-color: #3882F6;
+    background-color: #bb64d1;
     border-radius: 30px;
     padding:10px;
     border: 2px;
