--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ h3 {
     font-style: italic;
 }
 button {
-    background-color: #bb64d1;
+    background-color: #cf80e2;
     border-radius: 30px;
     padding:10px;
     border: 2px;
